gcc/testsuite/rust/compile/redef_error2.rs
const TEST: i32 = 2;
const TEST: f32 = 3.0; // { dg-error "redefined multiple times" }

fn main() {}
